Add working mode (migration, repository, gateway and controller)
